[tool.poetry]
name = "yrake"
version = "0.1.0"
description = "Dimplome Work by Barsukov Nikita"
authors = ["bezzubik <Barsik98n@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
textract = "^1.6.5"
click = "^8.1.3"
jellyfish = "^0.9.0"
segtok = "^1.5.11"
networkx = "^2.8"
prettytable = "^3.3.0"
PyQt5 = "^5.15.6"
keybert = "^0.5.1"
pke-tool = "^1.8.1"
rake-nltk = "^1.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
